@@ -1,5 +1,10 @@
 2008-02-11  Neal H. Walfield  <neal@gnu.org>
 
+	* object.c (folio_object_alloc): When reallocating an object and
+	the object is in memory, clear the memory.
+
+2008-02-11  Neal H. Walfield  <neal@gnu.org>
+
 	* cap-lookup.c (lookup): When calculating the value for *WRITABLE,
 	only consider the permission to dereference the capability in the
 	resolved slot when MODE is want_object.
